--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,8 +7,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+	<div class="navbar navbar-fixed-top">
+		<div class="navbar-inner">
+			<div class="container">
+				<a href="#" class="brand">mHeal</a>
+				<ul class="nav">
+					<li><%= link_to "Patient List", statuses_path %></li>
+				</ul>
+			</div>
+		</div>
+	</div>
 
-<%= yield %>
-
+<div class="container">
+	<%= yield %>
+</div>
 </body>
 </html>
