--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -6,7 +6,7 @@
 
 <% @statuses.each do |status| %>
 <div class="status">
-  <strong>Name</strong>
+  <strong><%= status.user.full_name %></strong>
   <p><%= status.content %></p>
   <div class="meta">
     <%= link_to status.created_at, status %>
