--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,7 +12,7 @@
 			<div class="container">
 				<a href="#" class="brand">mHeal</a>
 				<ul class="nav">
-					<li><%= link_to "All Statuses", statuses_path %></li>
+					<li><%= link_to "Patients List", statuses_path %></li>
 				</ul>
 				<ul class="nav pull-right">
 					<% if user_signed_in? %>
@@ -28,8 +28,13 @@
 	</div>
 
 	<div class="container">
-		<p class="notice"><%= notice %></p>
-		<p class="alert"><%= alert %></p>
+		<% flash.each do |type, message| %>
+			<div class="alert <%= flash_class type%>">
+				<button class="close" data-dismiss="alert">x</button>
+				<%= message %>
+			</div>			
+		<% end %>
+
 		<%= yield %>
 	</div>
 </body>
