--- a/app/assets/stylesheets/scaffolds.css.scss
+++ b/app/assets/stylesheets/scaffolds.css.scss
@@ -1,5 +1,6 @@
 body {
   background-color: #fff;
+  background-image: image-url("image.png");
   color: #333;
   font-family: verdana, arial, helvetica, sans-serif;
   font-size: 13px;
