--- a/app/views/statuses/_form.html.erb
+++ b/app/views/statuses/_form.html.erb
@@ -14,6 +14,6 @@
   <%= f.input :user_id, collection: User.all, label_method: :full_name %>
   <%= f.input :content %>
   <div class="actions">
-    <%= f.button :submit %>
+    <%= f.button :submit, 'Create Appointment'%>
   </div>
 <% end %>
